<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    tools:ignore="ExtraText">

    <!-- Título -->
    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/titulo_reporte_ciudadano"
        android:textSize="24sp"
        android:gravity="center"
        android:padding="16dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Mapa de Ubicación -->
    <ImageView
        android:id="@+id/ivMapaBogota"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/bogota"
        android:padding="30dp"
        app:layout_constraintTop_toBottomOf="@+id/tvTitulo"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp" />

    <!-- Panel para Ingresar Datos -->
    <LinearLayout
        android:id="@+id/llPanelDatos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="#808080"
        app:layout_constraintTop_toBottomOf="@+id/ivMapaBogota"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Cuadro de texto para Nombre Completo -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilNombreCompleto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:textColorHint="@color/colorAccent"
            android:hint="Nombre Completo">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNombreCompleto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textSize="20sp"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Cuadro de texto para Usuario -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:textColorHint="@color/colorAccent"
            android:hint="Usuario">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Cuadro de texto para eMail -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:textColorHint="@color/colorAccent"
            android:hint="eMail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Cuadro de texto para Password -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:textColorHint="@color/colorAccent"
            android:hint="Password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Cuadro de texto para Confirmación de Password -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:textColorHint="@color/colorAccent"
            android:hint="Confirmación de Password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Tipo de Usuario -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Tipo de Usuario:"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#333333"/>

        <Spinner
            android:id="@+id/spinnerTipoUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_tipo_incidente"
            android:entries="@array/TipoUsuario"
            android:minHeight="48dp" />


        <!-- Ingresar Ubicación -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Ubicación:"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#333333"/>

        <EditText
            android:id="@+id/etUbicacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_ubicacion"
            android:minHeight="48dp" />

        <!-- Campo para Descripción Detallada -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Descripción detallada:"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#333333"/>

        <EditText
            android:id="@+id/etDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_descripcion"
            android:inputType="textMultiLine"
            android:minLines="3" />

        <!-- Fecha Automática -->
        <TextView
            android:id="@+id/tvFecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_fecha"
            android:paddingTop="8dp" />

        <!-- Género -->
        <RadioGroup
            android:id="@+id/rgGenero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Genero"
                android:textSize="20sp"/>

            <RadioButton
                android:id="@+id/rbMasculino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textSize="20sp"
                android:text="Masculino" />

            <RadioButton
                android:id="@+id/rbFemenino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textSize="20sp"
                android:text="Femenino" />

            <RadioButton
                android:id="@+id/rbNoBinario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textSize="20sp"
                android:text="No Binario" />
        </RadioGroup>

        <TextView
            android:id="@+id/tvGeneroSeleccionado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Género seleccionado: "
            android:textStyle="bold" />


        <!-- Botón para Registrarse -->
        <Button
            android:id="@+id/btnRegistrarUsuario"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textSize="22sp"
            android:textColor="#FFFFFF"
            android:layout_marginTop="40dp"
            android:background="@drawable/button_rounded"
            android:text="@string/btn_registrar_usuario" />

        <!-- Botón para Iniciar sesion -->
        <Button
            android:id="@+id/btnIraIniciarSesion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_login" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
